--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "css:scss": "node-sass --output-style compressed -o dist src/scss",
-    "watch:css": "onchange \"src/scss\" -- npm run css:scss"
+    "watch:css": "onchange \"src/scss\" -- npm run css:scss",
+    "serve": "browser-sync start --server \"dist\" --files \"dist\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^2.26.13",
     "node-sass": "^5.0.0",
     "onchange": "^7.1.0"
   }
