--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "css:scss": "node-sass --output-style compressed -o dist src/scss",
-    "watch:css": "onchange \"src/scss\" -- npm run css:scss",
+    "watch": "onchange \"src/scss\" -- npm run css:scss",
     "serve": "browser-sync start --server \"dist\" --files \"dist\""
   },
   "author": "",
