--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "browser-sync": "^2.26.13",
     "node-sass": "^5.0.0",
     "onchange": "^7.1.0"
+  },
+  "dependencies": {
+    "simplebar": "^5.3.0"
   }
 }
